# ghc-bug-20918

./: README  throw-test.cabal
myclib/include/: test_error_throwing.h
myclib/src/: test_error_throwing.cpp
src/hs/: Main.hs  ThrowTest.hsc
